Fixed problems with SMS Gateway Demo: 1- Moved styles from the .html page into the CSS file. 2- Removed unnecessary global variables and wrapped the ones we use into the widget. 3- Changed the name of the variable from w.SMSGateway to something more simple like w.SMS which allows us to code more easily, however the widget name is still the same SMSGateway. 4- Now we ask for the Captcha on user Logon. 5- We don't show anymore the sticky dialog when we are in the localhost. 6- Also made the sticky dialog to only link to the "register" and not to the "login" anymore because we have a login button in the demo, also I changed the link to the useradmin to automatically link to the existing location. 7- I added the login / logout area in the top of the demo.

--- a/branches/jWebSocket-1.0/jWebSocketClient/web/demos/jwsSMSGateway/css/jwsSMSGateway.css
+++ b/branches/jWebSocket-1.0/jWebSocketClient/web/demos/jwsSMSGateway/css/jwsSMSGateway.css
@@ -36,8 +36,9 @@ h1#header{
     padding: 10px 10px 10px 10px;
 }
 #jCaptchaDiv {
-    width: 37%;
+    /*width: 37%;*/
     float: left;
+	width:253px;
 }
 #messageDiv {
     width: 55%;
@@ -84,6 +85,23 @@ p.pText {
 	margin-top: 3px;
     float: left;
     border: none !important;
+}
+
+#remaining_sms{
+	display: none;
+	float:left; 
+	font-size: 8pt;
+	margin-top: 10px;
+	width:253px;
+}
+
+#remaining_sms div{
+	display: inline;
+}
+
+.container-fluid{
+	max-width: 276px;
+	float:left;
 }
 
 #wordType{
